{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 50,
  "lineage": "9be574d7-70ca-8460-e998-3d177860de1c",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:security-group/sg-033c74e086550e8cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033c74e086550e8cc",
            "ingress": [],
            "name": "church-eks-cluster-eks-cluster-20251002162244470400000005",
            "name_prefix": "church-eks-cluster-eks-cluster-",
            "owner_id": "228449306376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "church-eks-cluster-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "church-eks-cluster-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:security-group/sg-0bdb8e545ca10b9c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdb8e545ca10b9c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033c74e086550e8cc"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "church-eks-cluster-rds-20251002162249696900000007",
            "name_prefix": "church-eks-cluster-rds-",
            "owner_id": "228449306376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "church-eks-cluster-rds-sg"
            },
            "tags_all": {
              "Name": "church-eks-cluster-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c4dddb259be36ff",
            "arn": "arn:aws:ec2:us-east-1:228449306376:elastic-ip/eipalloc-08c4dddb259be36ff",
            "association_id": "eipassoc-0ed4572ce6b411bc7",
            "domain": "vpc",
            "id": "eipalloc-08c4dddb259be36ff",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0618966377751f554",
            "private_dns": "ip-10-0-0-31.ec2.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-18-214-216-9.compute-1.amazonaws.com",
            "public_ip": "18.214.216.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "church-eks-cluster-nat-1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-nat-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3175f3fa5cb39f3",
            "arn": "arn:aws:ec2:us-east-1:228449306376:elastic-ip/eipalloc-0b3175f3fa5cb39f3",
            "association_id": "eipassoc-0ae7d6a1915ed85d0",
            "domain": "vpc",
            "id": "eipalloc-0b3175f3fa5cb39f3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-023d04ae8a9956632",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-98-90-43-246.compute-1.amazonaws.com",
            "public_ip": "98.90.43.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "church-eks-cluster-nat-2"
            },
            "tags_all": {
              "Name": "church-eks-cluster-nat-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:internet-gateway/igw-02aeb6da1690183c1",
            "id": "igw-02aeb6da1690183c1",
            "owner_id": "228449306376",
            "tags": {
              "Name": "church-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "church-eks-cluster-igw"
            },
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c4dddb259be36ff",
            "association_id": "eipassoc-0ed4572ce6b411bc7",
            "connectivity_type": "public",
            "id": "nat-0ead944b0d131bdfb",
            "network_interface_id": "eni-0618966377751f554",
            "private_ip": "10.0.0.31",
            "public_ip": "18.214.216.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096f0e0fbe180b64d",
            "tags": {
              "Name": "church-eks-cluster-nat-1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3175f3fa5cb39f3",
            "association_id": "eipassoc-0ae7d6a1915ed85d0",
            "connectivity_type": "public",
            "id": "nat-07d28ae7218752c5c",
            "network_interface_id": "eni-023d04ae8a9956632",
            "private_ip": "10.0.1.79",
            "public_ip": "98.90.43.246",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07891778dbfe71496",
            "tags": {
              "Name": "church-eks-cluster-nat-2"
            },
            "tags_all": {
              "Name": "church-eks-cluster-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:route-table/rtb-0615be27ae691b440",
            "id": "rtb-0615be27ae691b440",
            "owner_id": "228449306376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ead944b0d131bdfb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "church-eks-cluster-private-rt-1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:route-table/rtb-08e8869fd54e668dc",
            "id": "rtb-08e8869fd54e668dc",
            "owner_id": "228449306376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d28ae7218752c5c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "church-eks-cluster-private-rt-2"
            },
            "tags_all": {
              "Name": "church-eks-cluster-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:route-table/rtb-0754778d9b976c12e",
            "id": "rtb-0754778d9b976c12e",
            "owner_id": "228449306376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02aeb6da1690183c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "church-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "church-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6d5ee8ba3392cb",
            "route_table_id": "rtb-0615be27ae691b440",
            "subnet_id": "subnet-06c23236c6bf3b81b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bc58982a0e7f27f",
            "route_table_id": "rtb-08e8869fd54e668dc",
            "subnet_id": "subnet-01cb186cabec5dc71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd6568de22f5f853",
            "route_table_id": "rtb-0754778d9b976c12e",
            "subnet_id": "subnet-096f0e0fbe180b64d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b35c20e006435e",
            "route_table_id": "rtb-0754778d9b976c12e",
            "subnet_id": "subnet-07891778dbfe71496"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:subnet/subnet-06c23236c6bf3b81b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c23236c6bf3b81b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228449306376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "church-eks-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:subnet/subnet-01cb186cabec5dc71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb186cabec5dc71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228449306376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "church-eks-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:subnet/subnet-096f0e0fbe180b64d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096f0e0fbe180b64d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228449306376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "church-eks-cluster-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:subnet/subnet-07891778dbfe71496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07891778dbfe71496",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228449306376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "church-eks-cluster-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "church-eks-cluster-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0eb776919714f5b8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:228449306376:vpc/vpc-0eb776919714f5b8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dde515b3860b61b5",
            "default_route_table_id": "rtb-0d73bc86abd091464",
            "default_security_group_id": "sg-0a2b01bb4c119fc8e",
            "dhcp_options_id": "dopt-04117167dd3b04b26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb776919714f5b8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d73bc86abd091464",
            "owner_id": "228449306376",
            "tags": {
              "Name": "church-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "church-eks-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}